add register slide-in half modal Bottom Card

--- a/ItEasy/Base.lproj/LaunchScreen.storyboard
+++ b/ItEasy/Base.lproj/LaunchScreen.storyboard
@@ -57,6 +57,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="logo" destination="Y2a-ui-a4U" id="7ca-gJ-kow"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
